--- a/notebooks/main_hogares.ipynb
+++ b/notebooks/main_hogares.ipynb
@@ -10,10 +10,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0d8665dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'lectura' from 'c:\\\\Users\\\\javie\\\\Desktop\\\\INFORMATICA\\\\TallerProyectoENCUESTAR\\\\tp_integrador\\\\notebooks\\\\../src\\\\lectura.py'>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import sys\n",
     "from pathlib import Path\n",
@@ -30,10 +41,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "56fdf721",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset de hogares combinado guardado como ../files/hogares_combinado.csv\n"
+     ]
+    }
+   ],
    "source": [
     "from lectura import leer_archivos, guardar_dataset\n",
     "\n",
@@ -50,7 +69,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
