creacion de script para manipular columnas de Hogares. En progeso.

--- a/notebooks/main_hogares.ipynb
+++ b/notebooks/main_hogares.ipynb
@@ -49,7 +49,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset de hogares combinado guardado como ../files/hogares_combinado.csv\n"
+      "Dataset de hogares combinado guardado como ../files/hogares_combinados.csv\n"
      ]
     }
    ],
@@ -57,14 +57,30 @@
     "from lectura import leer_archivos, guardar_dataset\n",
     "\n",
     "carpeta_hogares = \"../files/hogares\"\n",
-    "csv_combinado = \"../files/hogares_combinado.csv\"\n",
+    "csv_combinados = \"../files/hogares_combinados.csv\"\n",
     "\n",
     "hogares_combinados = leer_archivos(carpeta_hogares)\n",
     "\n",
-    "guardar_dataset(hogares_combinados, csv_combinado)\n",
+    "guardar_dataset(hogares_combinados, csv_combinados)\n",
     "\n",
-    "print(f\"Dataset de hogares combinado guardado como {csv_combinado}\")\n"
+    "print(f\"Dataset de hogares combinado guardado como {csv_combinados}\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bddc82e1",
+   "metadata": {},
+   "source": [
+    "### Creacion de columnas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3175b2d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
