--- a/notebooks/main_individuos.ipynb
+++ b/notebooks/main_individuos.ipynb
@@ -10,10 +10,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "41d14dad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'lectura' from 'c:\\\\Users\\\\javie\\\\Desktop\\\\INFORMATICA\\\\TallerProyectoENCUESTAR\\\\tp_integrador\\\\notebooks\\\\../src\\\\lectura.py'>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import sys\n",
     "from pathlib import Path\n",
@@ -30,15 +41,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d48a6cb6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset de individuos combinado guardado como ../files/individuos_combinados.csv\n"
+     ]
+    }
+   ],
    "source": [
     "from lectura import leer_archivos, guardar_dataset\n",
     "\n",
     "carpeta_individuos = \"../files/individuos\"\n",
-    "csv_combinado = \"../files/individuos_combinado.csv\"\n",
+    "csv_combinado = \"../files/individuos_combinados.csv\"\n",
     "\n",
     "individuos_combinados = leer_archivos(carpeta_individuos)\n",
     "\n",
@@ -50,7 +69,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
